[MAS-XXX] Enable loading of UML from model server